// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`list inline list 1`] = `
<Component
  variant="inline"
>
  <ul
    className="pf-c-list pf-m-inline"
  >
    <ListItems>
      <Component>
        <ul
          className="pf-c-list"
        >
          <Component>
            <li>
              First
            </li>
          </Component>
          <Component>
            <li>
              Second
            </li>
          </Component>
          <Component>
            <li>
              Third
            </li>
          </Component>
        </ul>
      </Component>
    </ListItems>
  </ul>
</Component>
`;

exports[`list simple list 1`] = `
<Component>
  <ul
    className="pf-c-list"
  >
    <ListItems>
      <Component>
        <ul
          className="pf-c-list"
        >
          <Component>
            <li>
              First
            </li>
          </Component>
          <Component>
            <li>
              Second
            </li>
          </Component>
          <Component>
            <li>
              Third
            </li>
          </Component>
        </ul>
      </Component>
    </ListItems>
  </ul>
</Component>
`;
